// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> loading, stuck, offline 1`] = `
<div
  className="columns small-6 medium-8"
  id="local-title"
>
  <h1
    className="main-title stuck"
  >
    <div
      className="logo-flex"
    >
      <Memo(Connect(Link))
        title="Back to InterPro homepage"
        to={
          {
            "description": {},
          }
        }
      >
        <div
          className="logo-flex-item logo-icon stuck"
          title="Your browser appears to be offline, you might not have access to all the features of this website"
        >
          <InterProLogo
            loading={true}
          />
        </div>
        <div
          className="logo-flex-item logo-text"
        >
          InterPro
        </div>
      </Memo(Connect(Link))>
    </div>
  </h1>
  <h4
    className="subtitle stuck"
  >
    Classification of protein families
  </h4>
</div>
`;

exports[`<Title /> loading, stuck, online 1`] = `
<div
  className="columns small-6 medium-8"
  id="local-title"
>
  <h1
    className="main-title stuck"
  >
    <div
      className="logo-flex"
    >
      <Memo(Connect(Link))
        title="Back to InterPro homepage"
        to={
          {
            "description": {},
          }
        }
      >
        <div
          className="logo-flex-item logo-icon stuck online"
        >
          <InterProLogo
            loading={true}
          />
        </div>
        <div
          className="logo-flex-item logo-text"
        >
          InterPro
        </div>
      </Memo(Connect(Link))>
    </div>
  </h1>
  <h4
    className="subtitle stuck"
  >
    Classification of protein families
  </h4>
</div>
`;

exports[`<Title /> not loading, unstuck, offline 1`] = `
<div
  className="columns small-6 medium-8"
  id="local-title"
>
  <h1
    className="main-title"
  >
    <div
      className="logo-flex"
    >
      <Memo(Connect(Link))
        title="Back to InterPro homepage"
        to={
          {
            "description": {},
          }
        }
      >
        <div
          className="logo-flex-item logo-icon"
          title="Your browser appears to be offline, you might not have access to all the features of this website"
        >
          <InterProLogo
            loading={false}
          />
        </div>
        <div
          className="logo-flex-item logo-text"
        >
          InterPro
        </div>
      </Memo(Connect(Link))>
    </div>
  </h1>
  <h4
    className="subtitle"
  >
    Classification of protein families
  </h4>
</div>
`;

exports[`<Title /> not loading, unstuck, online 1`] = `
<div
  className="columns small-6 medium-8"
  id="local-title"
>
  <h1
    className="main-title"
  >
    <div
      className="logo-flex"
    >
      <Memo(Connect(Link))
        title="Back to InterPro homepage"
        to={
          {
            "description": {},
          }
        }
      >
        <div
          className="logo-flex-item logo-icon online"
        >
          <InterProLogo
            loading={false}
          />
        </div>
        <div
          className="logo-flex-item logo-text"
        >
          InterPro
        </div>
      </Memo(Connect(Link))>
    </div>
  </h1>
  <h4
    className="subtitle"
  >
    Classification of protein families
  </h4>
</div>
`;
